[tool.poetry]
name = "nexon_openapi"
version = "0.0.9"
description = ""
authors = ["bluewhale <koko8624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.24.0"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build]
include = [
  "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexon_openapi"]

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.pyright]
# this enables practically every flag given by pyright.
# there are a couple of flags that are still disabled by
# default in strict mode as they are experimental and niche.
typeCheckingMode = "strict"
pythonVersion = "3.7"

exclude = [
    "_dev",
    ".venv",
    ".nox",
]

reportImplicitOverride = true

reportImportCycles = false
reportPrivateUsage = false